# futures-bot1

./: .env.example  .gitignore  CLAUDE.md  ONBOARDING.md  README.md  pyproject.toml  pyrightconfig.json
config/: bot.example.yml
config/bots/: es_scalper.yml  example_orb_nq.yml  gold_bot.yml  lux_bot.yml  nq_maintenance.yml  propbot_nq.yml  surgebot_nq.yml
config/profiles/: maintenance.yml  surge.yml
dashboard-ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  vite.config.ts
dashboard-ui/src/: App.tsx  index.css  main.tsx
dashboard-ui/src/components/: AccountStatePanel.tsx  BotCard.tsx  BotIntentPanel.tsx  BotStateIndicator.tsx  EquityCurve.tsx  FleetGrid.tsx  HeartbeatIndicator.tsx  KillSwitch.tsx  ParamsEditor.tsx  PositionsTable.tsx  Topbar.tsx  TradeLog.tsx
dashboard-ui/src/lib/: api.ts  format.ts  mock.ts  utils.ts  ws.ts
dashboard-ui/src/pages/: BotDetail.tsx  Overview.tsx  Profiles.tsx  Settings.tsx
dashboard-ui/src/store/: ui.ts
dashboard-ui/src/test/: BotDetail.test.tsx  FleetGrid.test.tsx  format.test.ts
deploy/: README.md  check_heartbeat.sh  com.user.topstepbot-heartbeat.plist  com.user.topstepbot.plist  install.sh  uninstall.sh
docs/superpowers/plans/: 2026-05-22-plan-01-foundation.md  2026-05-22-plan-02-data-pipeline.md  2026-05-22-plan-03-risk-engine.md  2026-05-22-plan-04-sim-backtest.md  2026-05-22-plan-05-orb-strategy.md  2026-05-22-plan-06-ib-paper.md  2026-05-22-plan-07-observability.md  2026-05-22-plan-08-topstepx-live.md  2026-05-22-plan-09-mac-deploy.md  2026-05-22-plan-10-live-loop.md  2026-05-23-plan-11-topstepx-sim-adapter.md  2026-05-23-plan-12-multi-bot-runtime.md  2026-05-23-plan-13-proof-surface.md  2026-05-23-plan-14-multi-market-plumbing.md  2026-05-23-plan-15-surgebot.md  2026-05-23-plan-16-propbot.md  2026-05-23-plan-17-gold-bot.md  2026-05-23-plan-18-es-scalper.md  2026-05-23-plan-19-lux-bot.md  2026-05-23-plan-20-nq-maintenance.md  2026-05-23-plan-21-dashboard-allocator.md  2026-05-24-plan-22-production-readiness.md  2026-05-24-plan-23-trader-dashboard-v2.md
docs/superpowers/research/: 2026-05-22-pre-plan1-verification.md  2026-05-23-cme-comex-contract-specs.md  alpaca-futures-api.md  backtesting-frameworks.md  bot-architecture-patterns.md  futures-data-sources.md  prop-firm-strategy-literature.md  topstep-rules.md  tradovate-projectx-apis.md
src/bot/: config.py  constants.py  types.py
src/bot/backtest/: __main__.py  cli.py  engine.py  report.py  rule_replay.py  sim_client.py  strategy.py  tracker.py
src/bot/dashboard/: app.py  queries.py  routes.py
src/bot/data/: __main__.py  aggregator.py  continuous.py  contract_calendar.py  dq.py  firstratedata.py  ingest.py  live_ib.py
src/bot/execution/: ib_client.py  ports.py  topstepx_client.py  topstepx_constants.py
src/bot/journal/: __init__.py  journal.py  schema.py
src/bot/markets/: __init__.py  registry.py  spec.py
src/bot/observability/: __init__.py  bus.py  logger.py  telegram.py
src/bot/proof/: __init__.py  __main__.py  cli.py  generator.py  metrics.py  render.py  sources.py
src/bot/risk/: cancel_tracker.py  combine_drawdown.py  config.py  efa_drawdown.py  gate.py  news.py  policies.py
src/bot/runtime/: __init__.py  __main__.py  bar_source.py  cli.py  heartbeat.py  host_guard.py  hydrate.py  icloud_check.py  live_loop.py  main.py  reconcile.py  secrets.py  shutdown.py
src/bot/signals/: __init__.py  discord_source.py  fixture_source.py  parser.py  source.py
src/bot/strategy/: mean_reversion.py  orb.py  profile_loader.py  signal_strategy.py  tiered_sizing.py  trend_following.py
tests/: conftest.py  test_backtest_cli.py  test_backtest_cli_bot_flag.py  test_backtest_engine_end_to_end.py  test_backtest_engine_journal.py  test_backtest_report.py  test_backtest_rule_replay.py  test_backtest_sim_client.py  test_backtest_strategy_protocol.py  test_backtest_tracker.py  test_config.py  test_constants.py  test_data_aggregator.py  test_data_conformance.py  test_data_continuous_adjust.py  test_data_continuous_compute_ratios.py  test_data_continuous_roundtrip.py  test_data_contract_calendar.py  test_data_dq.py  test_data_firstratedata_filename.py  test_data_firstratedata_ingest.py  test_data_firstratedata_load.py  test_data_ingest_cli.py  test_data_live_ib.py  test_data_live_ib_skeleton.py  test_deploy_launchagent.py  test_execution_conformance.py  test_execution_ports.py  test_ib_async_api_surface.py  test_ib_execution_client_cancel.py  test_ib_execution_client_connect.py  test_ib_execution_client_init.py  test_ib_execution_client_place_bracket.py  test_ib_execution_client_place_market.py  test_ib_execution_client_reconnect.py  test_ib_execution_client_snapshots.py  test_journal_queries.py  test_journal_records.py  test_journal_schema.py  test_observability_bus.py  (+62 more)
tests/dashboard/: test_queries.py  test_routes.py
tests/dashboard/v2/: test_api.py  test_intent.py  test_live_loop_events.py  test_profiles.py  test_ws_bridge.py
tests/execution/topstepx_sim/: test_account.py  test_cli.py  test_client.py  (+3 more)
tests/fakes/: fake_ib.py  fake_projectx.py
tests/fixtures/: conformance_5sec_ticks.csv  mnq_roll_pair_2023z.csv  mnq_roll_pair_2024h.csv  news_calendar_sample.yml  nq_2023z_bad_ohlc.csv  nq_2023z_clean.csv
tests/integration/: test_dashboard_e2e.py  test_dashboard_v2_e2e.py  test_dashboard_v2_full_e2e.py  test_es_scalper_e2e.py  test_full_fleet_smoke.py  test_gold_bot_e2e.py  test_lux_bot_e2e.py  test_nq_maintenance_e2e.py  test_propbot_e2e.py  test_surgebot_e2e.py
tests/markets/: test_contract_calendar_markets.py  test_firstratedata_markets.py  test_ingest_cli_markets.py  test_live_ib_markets.py  test_registry.py  test_spec.py
tests/proof/: test_cli.py  test_generator.py  test_metrics.py  test_render.py  test_sources.py
tests/signals/: test_discord_source.py  test_fixture_source.py  test_parser.py  test_source.py
tests/strategy/: test_es_scalper_profile.py  test_nq_maintenance_profile.py  test_propbot_profile.py  test_signal_strategy.py  test_surgebot_profile.py  test_tiered_sizing.py  test_trend_following.py
(+65 files in other folders)
