[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot"
version = "0.0.1"
description = "Topstep futures trading bot — NQ/MNQ, NautilusTrader runtime"
readme = "README.md"
requires-python = ">=3.12,<3.14"  # 3.12 + 3.13 both supported; nautilus-trader 1.227 covers both per pre-Plan-1 verification
dependencies = [
    # Plan 1 imports only these two. Heavier deps (nautilus-trader, ib-async,
    # project-x-py, pyarrow, aiosqlite, python-telegram-bot, loguru,
    # pydantic-settings, python-dotenv) are added by the plan that first
    # imports them, to keep Plan 1's install fast and to avoid the Rust
    # toolchain build cost + the project-x-py PyPI-name uncertainty until
    # Plan 8 actually needs it.
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "freezegun>=1.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:nautilus_trader.*",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]
# iCloud Drive's sync layer corrupts sqlite-backed mypy caches → sqlite3.OperationalError.
# Park the cache on local disk so iCloud never sees it.
cache_dir = "/tmp/mypy-topstep-bot"

[[tool.mypy.overrides]]
module = ["nautilus_trader.*", "ib_async.*", "project_x.*"]
ignore_missing_imports = true

# Tests are explicit code; we don't enforce strict typing inside them so that
# pytest fixture parameters can be written `(utc_now)` instead of
# `(utc_now: datetime)` for every test. src/ stays strict.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "PT",  # pytest style
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length (covered by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]
