[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot"
version = "0.0.1"
description = "Topstep futures trading bot — NQ/MNQ, NautilusTrader runtime"
readme = "README.md"
requires-python = ">=3.12,<3.14"  # 3.12 + 3.13 both supported; nautilus-trader 1.227 covers both per pre-Plan-1 verification
dependencies = [
    # Plan 1 deps
    "pydantic>=2.7",
    "pyyaml>=6.0",
    # Plan 2 deps
    "nautilus-trader>=1.227,<1.228",  # pre-Plan-1 verification confirmed Py3.12/3.13 wheels exist
    "ib-async>=1.0.3",                # for IB live data feed (skeleton here; full impl Plan 6)
    "pyarrow>=16.0",                  # partitioned-parquet scans for backtest
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "freezegun>=1.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:nautilus_trader.*",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]
# iCloud Drive's sync layer corrupts sqlite-backed mypy caches → sqlite3.OperationalError.
# Park the cache on local disk so iCloud never sees it.
cache_dir = "/tmp/mypy-topstep-bot"

[[tool.mypy.overrides]]
module = ["nautilus_trader.*", "ib_async.*", "project_x.*"]
ignore_missing_imports = true

# Tests are explicit code; we don't enforce strict typing inside them so that
# pytest fixture parameters can be written `(utc_now)` instead of
# `(utc_now: datetime)` for every test. src/ stays strict.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "PT",  # pytest style
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length (covered by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]
