[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot"
version = "0.0.1"
description = "Topstep futures trading bot — NQ/MNQ, NautilusTrader runtime"
readme = "README.md"
requires-python = ">=3.12,<3.14"  # 3.12 + 3.13 both supported; nautilus-trader 1.227 covers both per pre-Plan-1 verification
dependencies = [
    # Plan 1 deps
    "pydantic>=2.7",
    "pyyaml>=6.0",
    # Plan 2 deps
    "nautilus-trader>=1.227,<1.228",  # pre-Plan-1 verification confirmed Py3.12/3.13 wheels exist
    "ib-async>=1.0.3",                # for IB live data feed (skeleton here; full impl Plan 6)
    "pyarrow>=16.0",                  # partitioned-parquet scans for backtest
    # Plan 7 deps (observability)
    "loguru>=0.7",                    # JSON-lines structured logging
    "python-telegram-bot>=21.4",      # Telegram alerts (polling-safe outbound only)
    "aiosqlite>=0.20",                # async SQLite for Journal (WAL mode)
    "httpx>=0.27",                    # async HTTP for Telegram REST API
    # Plan 8 deps (TopstepX live)
    "project-x-py>=3.5.9,<4.0",       # TopstepX REST + SignalR (module name: project_x_py)
    # Plan 9 deps (Mac deploy / runtime)
    "python-dotenv>=1.0",             # .env file loading for load_secrets()
    # Plan 13 deps (proof-surface bundle: equity-curve PNG + HTML report)
    "matplotlib>=3.8",                # equity-curve PNG (Agg backend, headless)
    "jinja2>=3.1",                    # HTML report template rendering
    # Plan 19 deps (Lux Bot — Discord signal ingestion)
    "discord.py>=2.4,<3.0",           # canonical async Discord client (mock-able for tests)
    # Plan 21 deps (dashboard — local FastAPI + uvicorn side-car)
    "fastapi>=0.115",                 # ASGI app surface for the read-only dashboard
    "uvicorn>=0.30",                  # ASGI server for the side-car HTTP task
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "freezegun>=1.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bot.proof" = ["templates/*.j2"]
"bot.dashboard" = ["templates/*.j2"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:nautilus_trader.*",
    # project_x_py 3.5.9 calls uvloop.install() at import time and pulls in
    # signalrcore + websocket-client, which leak sockets / event loops at
    # interpreter shutdown. We can't fix third-party teardown; treat as warn-only.
    "ignore::DeprecationWarning:uvloop",
    "ignore::DeprecationWarning:project_x_py.*",
    # uvicorn/websockets 13.x compat: uvicorn passes a 2-arg ws_handler that
    # websockets.legacy deprecated. Upstream uvicorn fix is in 0.30+ branch but
    # the warning fires on every WS connect under our pinned versions.
    "ignore::DeprecationWarning:websockets.legacy.*",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::ResourceWarning",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_untyped_decorators = false
plugins = ["pydantic.mypy"]
# iCloud Drive's sync layer corrupts sqlite-backed mypy caches → sqlite3.OperationalError.
# Park the cache on local disk so iCloud never sees it.
cache_dir = "/tmp/mypy-topstep-bot"

[[tool.mypy.overrides]]
module = ["nautilus_trader.*", "ib_async.*", "project_x_py.*", "pyarrow.*"]
ignore_missing_imports = true

# Files that USE pyarrow may invoke functions whose internal callees mypy
# flags as no-untyped-call (pq.write_table → C bindings). Suppress that one
# error category in data modules; everything else stays strict.
[[tool.mypy.overrides]]
module = ["bot.data.firstratedata", "bot.data.continuous"]
disable_error_code = ["no-untyped-call"]

# matplotlib's bundled type stubs accept only float/Sequence inputs for plot(),
# but Axes.plot() accepts datetime sequences at runtime (mpl auto-converts).
# Disable arg-type only in the proof renderer; the rest of src/ stays strict.
[[tool.mypy.overrides]]
module = ["bot.proof.render"]
disable_error_code = ["arg-type"]

# Tests are explicit code; we don't enforce strict typing inside them so that
# pytest fixture parameters can be written `(utc_now)` instead of
# `(utc_now: datetime)` for every test. src/ stays strict.
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_unused_ignores = false      # implementer-added defensive `# type: ignore`s in tests are OK
disable_error_code = ["type-arg", "arg-type", "operator"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "PT",  # pytest style
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line length (covered by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]
